// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`figmaTheme/buildThemeFiles builds theme files for nested themes 1`] = `
{
  "theme1": {
    "colors": {
      "black": "#000000",
      "brand": {
        "green": "#219653",
        "orange": "orange",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "grey",
        "10": "#f9f9f9",
      },
      "theme": {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
    "spacing": {
      "default": "2",
    },
  },
  "theme2": {
    "colors": {
      "black": "#000000",
      "brand": {
        "green": "#219653",
        "orange": "purple",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "#f6f6f6",
        "10": "#f9f9f9",
      },
      "theme": {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
    "spacing": {
      "default": "2",
    },
  },
  "themes": {
    "themes": [
      "theme1",
      "theme2",
    ],
  },
}
`;

exports[`figmaTheme/buildThemeFiles builds theme files for source themes 1`] = `
{
  "theme1": {
    "colors": {
      "brand": {
        "orange": "orange",
      },
      "grey": {
        "09": "grey",
      },
      "theme": {
        "primary": "",
      },
    },
  },
  "theme2": {
    "colors": {
      "brand": {
        "orange": "purple",
      },
      "theme": {
        "primary": "",
      },
    },
  },
  "themes": {
    "themes": [
      "theme1",
      "theme2",
    ],
  },
}
`;

exports[`figmaTheme/buildThemeFiles builds theme files for themes 1`] = `
{
  "theme1": {
    "colors": {
      "black": "#000000",
      "brand": {
        "green": "#219653",
        "orange": "orange",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "grey",
        "10": "#f9f9f9",
      },
      "theme": {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
  },
  "theme2": {
    "colors": {
      "black": "#000000",
      "brand": {
        "green": "#219653",
        "orange": "purple",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "#f6f6f6",
        "10": "#f9f9f9",
      },
      "theme": {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
  },
  "themes": {
    "themes": [
      "theme1",
      "theme2",
    ],
  },
}
`;
